--- a/index.html
+++ b/index.html
@@ -430,13 +430,13 @@
                                 <div class="email">
                                     <i class="bi bi-envelope"></i>
                                     <h4>Email:</h4>
-                                    <p>divyakalloorkattu@gmail.com</p>
+                                    <p>xxxxxxxxxxxx@gmail.com</p>
                                 </div>
 
                                 <div class="phone">
                                     <i class="bi bi-phone"></i>
                                     <h4>Call:</h4>
-                                    <p>+91 9656734289 / +91 8921954051</p>
+                                    <p>+91 xxxxxxxxxx / +91 xxxxxxxxxx</p>
                                 </div>
 
                                 <iframe
